Add monospace for numbers

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -24,3 +24,7 @@ html.dark {
   --c-brand: hsl(181, 49%, 39%);
   --c-brand-light: hsl(181, 69%, 34%);
 }
+
+span.number {
+  font-family: monospace;
+}
