Edit details styles

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -28,3 +28,8 @@ html.dark {
 span.number {
   font-family: monospace;
 }
+
+details {
+  background-color: #212633 !important;
+  padding: 1em 1.6em !important;
+}
