--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -35,3 +35,7 @@ details {
   background-color: #212633 !important;
   padding: 1em 1.6em !important;
 }
+
+.custom-container.tip {
+  background-color: #00ff0006;
+}
