Change "details" style for light mode

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -39,3 +39,8 @@ details {
 .custom-container.tip {
   background-color: #00ff0006;
 }
+
+details {
+  background-color: #cccfd5 !important;
+  padding: 1em 1.6em !important;
+}
